# data_validation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.cloud.yml  docker-compose.yml  guia.md  pyproject.toml  test_api.py
src/extractor/: __init__.py  config.py  dependencies.py  main.py
src/extractor/api/: __init__.py  middleware.py  router.py
src/extractor/api/endpoints/: __init__.py  extract.py  health.py  schemas.py
src/extractor/core/: __init__.py  cache.py  extractor.py  instructor_client.py
src/extractor/schemas/: __init__.py  base.py  registry.py  requests.py
src/extractor/schemas/domains/: __init__.py  contact.py  ecommerce.py  financial.py  legal.py  medical.py
src/extractor/utils/: __init__.py  logging.py
tests/: conftest.py
tests/integration/: test_api.py
tests/property/: test_schemas_hypothesis.py
tests/unit/: test_cache.py  test_config.py  test_extractor.py  test_registry.py  test_schemas.py
